<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8"
    android:background="#FFFFFF"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/textViewDate8"
        android:layout_width="369dp"
        android:layout_height="24dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textViewTime8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm:ss"
        android:text="@string/time"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate8"
        app:layout_constraintVertical_bias="0.013" />


    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:contentDescription="@string/foto1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gambar17"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView112"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:contentDescription="@string/image28"
        app:layout_constraintBottom_toTopOf="@+id/textViewDate8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/gambar19" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="337dp"
        android:layout_height="650dp"
        android:contentDescription="@string/l_h1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime8"
        app:layout_constraintVertical_bias="0.197"
        app:srcCompat="@drawable/gambar44"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textViewwf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h2"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf2"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewwf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h7"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewwf3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h8"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf4"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textViewwf4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h9"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textViewwf6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lh1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/textViewwf10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h3"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/textViewwf9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lh5"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf10"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/textViewwf8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lh3"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.574" />

    <TextView
        android:id="@+id/textViewwf11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h4"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf12"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textViewwf12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_h5"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textViewwf7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lh2"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf8"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.574" />

    <TextView
        android:id="@+id/textViewwf5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wf1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toStartOf="@+id/textViewwf6"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView40"
        app:layout_constraintVertical_bias="0.418" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:contentDescription="@string/todo0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toEndOf="@+id/imageView112"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/gambar45"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>