<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:contentDescription="@string/foto1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gambar17"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image28"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toStartOf="@+id/imageView35"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="@drawable/gambar19" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:contentDescription="@string/weight"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.617"
        app:srcCompat="@drawable/gambar42" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weight2"
        app:layout_constraintBottom_toTopOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.745"
        app:srcCompat="@drawable/gambar35" />

    <TextView
        android:id="@+id/textViewDate7"
        android:layout_width="369dp"
        android:layout_height="24dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewTime7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm:ss"
        android:text="@string/time"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate7"
        app:layout_constraintVertical_bias="0.013" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weight3"
        app:layout_constraintBottom_toTopOf="@+id/imageView38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927"
        app:srcCompat="@drawable/gambar36"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weight4"
        app:layout_constraintBottom_toTopOf="@+id/imageView39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        app:srcCompat="@drawable/gambar37" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weight5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        app:srcCompat="@drawable/gambar38" />

    <TextView
        android:id="@+id/textVieww2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr2"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView37"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="DuplicateIds,UnknownId,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textVieww1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView36"
        app:layout_constraintVertical_bias="0.44"
        tools:ignore="DuplicateIds,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textVieww4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr4"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView39"
        app:layout_constraintVertical_bias="0.457"
        tools:ignore="DuplicateIds,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textVieww3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr3"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView38"
        app:layout_constraintVertical_bias="0.474"
        tools:ignore="DuplicateIds,UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>